2005-03-17 09:30:06  Pawel Dziekonski  <pawel.dziekonski@pwr.wroc.pl>  (roessler)

	* po/pl.po: update

2005-03-16 07:01:59  Brendan Cully  <brendan@kublai.com>  (brendan)

	* doc/Makefile.in: As Ralf Wildenhues noted, the cygwin EXEEXT
	patch was incomplete. Note to self: avoid patching on short
	sleep. Starting tomorrow.

2005-03-16 02:49:33  Brendan Cully  <brendan@kublai.com>  (brendan)

	* configure.in, doc/Makefile.in, hcache.c, Makefile.am: Various
	cygwin portability fixes

2005-03-15 04:40:40  Brendan Cully  <brendan@kublai.com>  (brendan)

	* crypthash.h: Don't define uint32_t anywhere but in
	config.h. Spotted by Alain Bench. 

2005-03-13 16:35:35  roessler  (roessler)

	* po/sv.po, po/tr.po, po/uk.po, po/zh_CN.po, po/zh_TW.po,
	po/id.po, po/it.po, po/ja.po, po/ko.po, po/lt.po, po/nl.po,
	po/pl.po, po/pt_BR.po, po/ru.po, po/sk.po, VERSION, po/bg.po,
	po/ca.po, po/cs.po, po/da.po, po/de.po, po/el.po, po/eo.po,
	po/es.po, po/et.po, po/fr.po, po/gl.po, po/hu.po, reldate.h:
	automatic post-release commit for mutt-1.5.9

2005-03-13 16:29:09  Morten Bo Johansen  <mojo@mbjnet.dk>  (roessler)

	* po/da.po: update

2005-03-05 18:15:20  Christoph Ludwig  <cludwig@cdc.informatik.tu-darmstadt.de>  (roessler)

	* crypt.c: The attached patch fixes a segfault I observed
	today: mutt failed to check for a possible null pointer in
	mutt_is_application_smime(Body*).

2005-03-05 07:10:57  brendan  (brendan)

	* mutt_sasl.c, mutt_sasl.h, mutt_socket.c, mutt_socket.h,
	mutt_ssl.c, mutt_ssl_gnutls.c, mutt_ssl_nss.c, mutt_tunnel.c:
	Rename open/close/read/write function pointers to avoid problems
	with systems where standard open/close/read/write functions are
	implemented with macros. Thanks to Aaron Crane and others for
	their input about the problem.

2005-03-01 15:53:25  Vsevolod Volkov  <vvv@mutt.org.ua>  (roessler)

	* po/ru.po: update

2005-03-01 15:52:33  Thomas Glanzmann  <sithglan@stud.uni-erlangen.de>  (roessler)
