@@ -71,7 +71,7 @@ int imap_read_headers (IMAP_DATA * idata, int msgbegin, int msgend)
 
 #if USE_HCACHE
   void *hc = NULL;
-  uint64_t *uid_validity = NULL;
+  unsigned long *uid_validity = NULL;
   char uid_buf[64];
 #endif /* USE_HCACHE */
 
@@ -154,7 +154,7 @@ int imap_read_headers (IMAP_DATA * idata, int msgbegin, int msgend)
 
       sprintf (uid_buf, "/%u", h.data->uid);    /* XXX --tg 21:41 04-07-11 */
       uid_validity =
-        (uint64_t *) mutt_hcache_fetch (hc, uid_buf, &imap_hcache_keylen);
+        (unsigned long *) mutt_hcache_fetch (hc, uid_buf, &imap_hcache_keylen);
 
       if (uid_validity != NULL && *uid_validity == idata->uid_validity) {
         ctx->hdrs[msgno] =
