@@ -112,7 +112,7 @@ HEADER *mutt_hcache_restore (const unsigned char *d, HEADER ** oh);
 void *mutt_hcache_fetch (void *db, const char *filename,
                          size_t (*keylen) (const char *fn));
 int mutt_hcache_store (void *db, const char *filename, HEADER * h,
-                       uint64_t uid_validity,
+                       unsigned long uid_validity,
                        size_t (*keylen) (const char *fn));
 int mutt_hcache_delete (void *db, const char *filename,
                         size_t (*keylen) (const char *fn));
