@@ -1,3 +1,11 @@
+2005-03-22 03:40:54  Thomas Glanzmann  <sithglan@stud.uni-erlangen.de>  (brendan)
+
+	* hcache.c, imap/imap.c, imap/imap_private.h, imap/message.c,
+        protos.h: Thomas graces us with this patch that resolves a
+	type-size inconsistency in the UIDVALIDITY parser.
+
+        Edited for correctness.
+
 2005-03-17 09:30:06  Pawel Dziekonski  <pawel.dziekonski@pwr.wroc.pl>  (roessler)
 
 	* po/pl.po: update
@@ -359,7 +367,7 @@
 2005-01-29 19:15:07  Thomas Glanzmann  <sithglan@stud.uni-erlangen.de>  (roessler)
                                  
      * hcache.c: - make hcache.c conform to mutt codingstyle
-     - use $Id: ChangeLog,v 3.410 2005/03/17 09:30:29 roessler Exp $ CVS keyword instead of %K% BitKeeper keyword
+     - use $Id: ChangeLog,v 3.411 2005/03/22 03:42:22 brendan Exp $ CVS keyword instead of %K% BitKeeper keyword
                                  
 2005-01-29 19:15:07  Thomas Glanzmann  <sithglan@stud.uni-erlangen.de>  (roessler)
 
